--- a/docs/professor/alvaro_jose_de_almeida_araujo.mdx
+++ b/docs/professor/alvaro_jose_de_almeida_araujo.mdx
@@ -1,7 +1,7 @@
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "PSS informática",
+  title: "Álvaro José de Almeida Araújo",
   base: "",
   weekClasses: [
     {
@@ -11,9 +11,9 @@ export const data = {
           subject: "Projeto Integrador III",
           size: 1,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -24,9 +24,9 @@ export const data = {
           subject: "Desenvolvimento WEB Orientado a Objetos",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2024B"
           ],
@@ -34,10 +34,23 @@ export const data = {
           color: ""
         },
         {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Álvaro José de Almeida Araújo"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "13:10 - 14:00",
+          color: ""
+        },
+        {
           subject: "Projeto integrador I",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
           classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
@@ -55,9 +68,9 @@ export const data = {
           subject: "Desenvolvimento Responsivo e Otimização de Sites",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -68,9 +81,9 @@ export const data = {
           subject: "Laboratório de Banco de Dados",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2024B"
           ],
@@ -81,9 +94,9 @@ export const data = {
           subject: "Projeto Integrador III",
           size: 1,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -103,26 +116,13 @@ export const data = {
           subject: "Serviços em nuvem",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
           time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Projeto Integrador II",
-          size: 2,
-          teachers: [
-            "PSS informática"
-          ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -192,7 +192,7 @@ export const data = {
   ]
 }
 
-# PSS informática
+# Álvaro José de Almeida Araújo
 
 <div>
   {
