--- a/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
+++ b/docs/professor/caroline_domingues_porto_do_nascimento_barbieri.mdx
@@ -36,7 +36,7 @@ export const data = {
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2025B - Grupo B"
           ],
@@ -49,7 +49,7 @@ export const data = {
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2025B - Grupo A"
           ],
