--- a/docs/professor/douglas_barbosa_sousa.mdx
+++ b/docs/professor/douglas_barbosa_sousa.mdx
@@ -26,7 +26,7 @@ export const data = {
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "IIW2024A"
           ],
@@ -44,7 +44,7 @@ export const data = {
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "IIW2024A"
           ],
