--- a/docs/professor/fabio_fernandes_da_silva.mdx
+++ b/docs/professor/fabio_fernandes_da_silva.mdx
@@ -12,20 +12,6 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Processos de Fabricação 3",
-          size: 2,
-          teachers: [
-            "Fábio Fernandes da Silva",
-            "Luiz Inácio Chaves"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: [
-            "EIN2022"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Tecnologia dos Materiais",
           size: 2,
           teachers: [
@@ -34,6 +20,20 @@ export const data = {
           classroom: "Laboratório de Metrologia B4",
           students: [
             "EIN2025"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Processos de Fabricação 3",
+          size: 2,
+          teachers: [
+            "Fábio Fernandes da Silva",
+            "Luiz Inácio Chaves"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "EIN2022"
           ],
           time: "10:15 - 11:05",
           color: ""
