--- a/docs/professor/felipe_fraga_de_oliveira.mdx
+++ b/docs/professor/felipe_fraga_de_oliveira.mdx
@@ -1,23 +1,75 @@
----
-slug: /sala/sala_2-2
----
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Sala 2-2",
-  base: "Bloco 2",
+  title: "Felipe Fraga de Oliveira",
+  base: "",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Felipe Fraga de Oliveira"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2025B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Matemática I",
+          size: 2,
+          teachers: [
+            "Felipe Fraga de Oliveira"
+          ],
+          classroom: "Sala 01 - CR Toledo",
+          students: [
+            "IIW2025B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Matemática II",
+          size: 2,
+          teachers: [
+            "Felipe Fraga de Oliveira"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Matemática III",
+          size: 2,
+          teachers: [
+            "Felipe Fraga de Oliveira"
+          ],
+          classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -27,16 +79,16 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Educação Física III",
+          subject: "Matemática II",
           size: 2,
           teachers: [
-            "Kleber Augusto Michalichem"
+            "Felipe Fraga de Oliveira"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Sala 02 - CR Toledo",
           students: [
-            "AGO2023"
+            "IIW2024B"
           ],
-          time: "13:10 - 14:00",
+          time: "07:30 - 08:20",
           color: ""
         }
       ]
@@ -102,7 +154,7 @@ export const data = {
   ]
 }
 
-# Sala 2-2
+# Felipe Fraga de Oliveira
 
 <div>
   {
