--- a/docs/professor/pedro_leites_junior.mdx
+++ b/docs/professor/pedro_leites_junior.mdx
@@ -109,6 +109,19 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
+          subject: "Literatura e Produção Textual II",
+          size: 1,
+          teachers: [
+            "Pedro Leites Junior"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "AGO2024"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
           subject: "Literatura e Produção Textual III",
           size: 2,
           teachers: [
@@ -138,21 +151,7 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Literatura e Produção Textual II",
-          size: 1,
-          teachers: [
-            "Pedro Leites Junior"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "AGO2024"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
