--- a/docs/professor/rafael_luis_bartz.mdx
+++ b/docs/professor/rafael_luis_bartz.mdx
@@ -13,11 +13,11 @@ export const data = {
           teachers: [
             "Rafael Luis Bartz"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
-          time: "10:15 - 11:05",
+          time: "08:20 - 09:10",
           color: ""
         },
         {
