--- a/docs/professor/samuel_stephan_milczuk.mdx
+++ b/docs/professor/samuel_stephan_milczuk.mdx
@@ -13,7 +13,7 @@ export const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "AGO2025 - Grupo B"
           ],
@@ -57,7 +57,7 @@ export const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2023A"
           ],
