--- a/docs/professor/sergio_ricardo_ferrazoli.mdx
+++ b/docs/professor/sergio_ricardo_ferrazoli.mdx
@@ -35,7 +35,7 @@ export const data = {
           teachers: [
             "Sergio Ricardo Ferrazoli"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
             "IIW2025B - Grupo A"
           ],
@@ -48,7 +48,7 @@ export const data = {
           teachers: [
             "Sergio Ricardo Ferrazoli"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
             "IIW2025B - Grupo B"
           ],
@@ -59,10 +59,6 @@ export const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
       dayClasses: [
         {
           subject: "Administração de Sistemas Operacionais e Redes",
@@ -78,6 +74,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
