--- a/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_a.mdx
@@ -9,21 +9,7 @@ export const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Informática instrumental e aplicada",
-          size: 2,
-          teachers: [
-            "Samuel Stephan Milczuk"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "AGO2025 - Grupo B"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
