--- a/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_a_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_a_-_cr_toledo.mdx
@@ -11,36 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Desenvolvimento WEB Orientado a Objetos",
-          size: 2,
-          teachers: [
-            "PSS informática"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
-          size: 2,
-          teachers: [
-            "Rafael Luis Bartz"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        },
-        {
           subject: "Projeto integrador I",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
           classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
@@ -53,60 +27,33 @@ export const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: [
-        {
-          subject: "Desenvolvimento Responsivo e Otimização de Sites",
-          size: 2,
-          teachers: [
-            "PSS informática"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Laboratório de Banco de Dados",
-          size: 2,
-          teachers: [
-            "PSS informática"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Lógica de programação",
+          subject: "Fundamentos de informática",
           size: 2,
           teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
+            "Sergio Ricardo Ferrazoli"
           ],
           classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
-            "IIW2025B - Grupo B"
+            "IIW2025B - Grupo A"
           ],
           time: "08:20 - 09:10",
           color: ""
         },
         {
-          subject: "Lógica de programação",
+          subject: "Fundamentos de informática",
           size: 2,
           teachers: [
-            "Caroline Domingues Porto do Nascimento Barbieri"
+            "Sergio Ricardo Ferrazoli"
           ],
           classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
-            "IIW2025B - Grupo A"
+            "IIW2025B - Grupo B"
           ],
           time: "10:15 - 11:05",
           color: ""
