--- a/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_b_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_b_-_cr_toledo.mdx
@@ -11,16 +11,29 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Projeto Integrador III",
-          size: 1,
+          subject: "Desenvolvimento WEB Orientado a Objetos",
+          size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
           classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
-          time: "07:30 - 08:20",
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Projeto Integrador II",
+          size: 2,
+          teachers: [
+            "Álvaro José de Almeida Araújo"
+          ],
+          classroom: "Laboratório de Informatica B - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "13:10 - 14:00",
           color: ""
         },
         {
@@ -42,16 +55,16 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Projeto Integrador III",
-          size: 1,
+          subject: "Laboratório de Banco de Dados",
+          size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
           classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
-            "IIW2023B"
+            "IIW2024B"
           ],
-          time: "15:05 - 15:55",
+          time: "13:10 - 14:00",
           color: ""
         }
       ]
@@ -60,27 +73,27 @@ export const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Fundamentos de informática",
+          subject: "Lógica de programação",
           size: 2,
           teachers: [
-            "Sergio Ricardo Ferrazoli"
+            "Caroline Domingues Porto do Nascimento Barbieri"
           ],
           classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
-            "IIW2025B - Grupo A"
+            "IIW2025B - Grupo B"
           ],
           time: "08:20 - 09:10",
           color: ""
         },
         {
-          subject: "Fundamentos de informática",
+          subject: "Lógica de programação",
           size: 2,
           teachers: [
-            "Sergio Ricardo Ferrazoli"
+            "Caroline Domingues Porto do Nascimento Barbieri"
           ],
           classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
-            "IIW2025B - Grupo B"
+            "IIW2025B - Grupo A"
           ],
           time: "10:15 - 11:05",
           color: ""
@@ -90,50 +103,6 @@ export const data = {
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Serviços em nuvem",
-          size: 2,
-          teachers: [
-            "PSS informática"
-          ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Projeto Integrador II",
-          size: 2,
-          teachers: [
-            "PSS informática"
-          ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "10:15 - 11:05",
-          color: ""
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB",
-          size: 2,
-          teachers: [
-            "Humberto Fioravante Ferro"
-          ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
         {
           subject: "Administração de Sistemas Operacionais e Redes",
           size: 2,
@@ -148,6 +117,10 @@ export const data = {
           color: ""
         }
       ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: []
     }
   ],
   time: [
