--- a/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_c_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/laboratorio_de_informatica_c_-_cr_toledo.mdx
@@ -1,36 +1,39 @@
+---
+slug: /sala/laboratorio_de_informatica_c_-_cr_toledo
+---
 import { Grid } from "@site/src/components/Grid";
 import BrowserOnly from "@docusaurus/BrowserOnly";
 export const data = {
-  title: "Professor Matemática Biopark",
-  base: "",
+  title: "Laboratório de Informatica C - CR Toledo",
+  base: "Bloco CR IFPR-Biopark",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Matemática I",
-          size: 2,
+          subject: "Projeto Integrador III",
+          size: 1,
           teachers: [
-            "Professor Matemática Biopark"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Sala 01 - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
-            "IIW2025B"
+            "IIW2023B"
           ],
-          time: "08:20 - 09:10",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Matemática II",
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Rafael Luis Bartz"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
-            "IIW2024B"
+            "IIW2023B"
           ],
-          time: "13:10 - 14:00",
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
@@ -39,14 +42,49 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Matemática I",
+          subject: "Desenvolvimento Responsivo e Otimização de Sites",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Sala 01 - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
-            "IIW2025B"
+            "IIW2023B"
+          ],
+          time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Projeto Integrador III",
+          size: 1,
+          teachers: [
+            "Álvaro José de Almeida Araújo"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "15:05 - 15:55",
+          color: ""
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: []
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Serviços em nuvem",
+          size: 2,
+          teachers: [
+            "Álvaro José de Almeida Araújo"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "IIW2023B"
           ],
           time: "07:30 - 08:20",
           color: ""
@@ -54,28 +92,15 @@ export const data = {
       ]
     },
     {
-      dayName: "Quarta-Feira",
+      dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Matemática II",
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Humberto Fioravante Ferro"
           ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
-          subject: "Matemática III",
-          size: 2,
-          teachers: [
-            "Professor Matemática Biopark"
-          ],
-          classroom: "Sala 03 - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -83,14 +108,6 @@ export const data = {
           color: ""
         }
       ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: []
     }
   ],
   time: [
@@ -153,7 +170,7 @@ export const data = {
   ]
 }
 
-# Professor Matemática Biopark
+# Laboratório de Informatica C - CR Toledo
 
 <div>
   {
