--- a/docs/sala/bloco_cr_ifpr-biopark/sala_01_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/sala_01_-_cr_toledo.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Lingua estrangeira - Inglês",
-          size: 1,
+          subject: "Matemática I",
+          size: 2,
           teachers: [
-            "Josiane Hammes"
+            "Felipe Fraga de Oliveira"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
@@ -24,16 +24,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática I",
-          size: 2,
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
           teachers: [
-            "Professor Matemática Biopark"
+            "Josiane Hammes"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
             "IIW2025B"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -84,7 +84,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Felipe Fraga de Oliveira"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
@@ -200,10 +200,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química I",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Talita Bortolini"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
@@ -213,10 +213,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura I",
+          subject: "Química I",
           size: 2,
           teachers: [
-            "Talita Bortolini"
+            "Cosme Oliveira da Silva"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
