--- a/docs/sala/bloco_cr_ifpr-biopark/sala_02_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/sala_02_-_cr_toledo.mdx
@@ -35,19 +35,6 @@ export const data = {
           ],
           time: "10:15 - 11:05",
           color: ""
-        },
-        {
-          subject: "Matemática II",
-          size: 2,
-          teachers: [
-            "Professor Matemática Biopark"
-          ],
-          classroom: "Sala 02 - CR Toledo",
-          students: [
-            "IIW2024B"
-          ],
-          time: "13:10 - 14:00",
-          color: ""
         }
       ]
     },
@@ -115,7 +102,7 @@ export const data = {
           subject: "Matemática II",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Felipe Fraga de Oliveira"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
@@ -187,10 +174,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura II",
+          subject: "Matemática II",
           size: 2,
           teachers: [
-            "Talita Bortolini"
+            "Felipe Fraga de Oliveira"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
@@ -210,6 +197,19 @@ export const data = {
             "IIW2024B"
           ],
           time: "09:25 - 10:15",
+          color: ""
+        },
+        {
+          subject: "Língua Portuguesa e Literatura II",
+          size: 2,
+          teachers: [
+            "Talita Bortolini"
+          ],
+          classroom: "Sala 02 - CR Toledo",
+          students: [
+            "IIW2024B"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
