--- a/docs/turma/ago/ago2025.mdx
+++ b/docs/turma/ago/ago2025.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Filosofia I",
+          subject: "Sociologia I",
           size: 1,
           teachers: [
-            "José Provetti Júnior"
+            "Karianny Aparecida Gerotto Del Mouro"
           ],
           classroom: "Sala 8-2",
           students: [
@@ -68,7 +68,7 @@ export const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Informatica B",
           students: [
             "AGO2025 - Grupo B"
           ],
@@ -190,10 +190,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Sociologia I",
+          subject: "Filosofia I",
           size: 1,
           teachers: [
-            "Karianny Aparecida Gerotto Del Mouro"
+            "José Provetti Júnior"
           ],
           classroom: "Sala 8-2",
           students: [
