--- a/docs/turma/iiw/iiw2023a.mdx
+++ b/docs/turma/iiw/iiw2023a.mdx
@@ -60,7 +60,7 @@ export const data = {
           teachers: [
             "Vagner Simões Santos"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2023A"
           ],
@@ -86,7 +86,7 @@ export const data = {
           teachers: [
             "Samuel Stephan Milczuk"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2023A"
           ],
