--- a/docs/turma/iiw/iiw2023b.mdx
+++ b/docs/turma/iiw/iiw2023b.mdx
@@ -14,13 +14,26 @@ export const data = {
           subject: "Projeto Integrador III",
           size: 1,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Rafael Luis Bartz"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "08:20 - 09:10",
           color: ""
         },
         {
@@ -30,19 +43,6 @@ export const data = {
             "Josiane Hammes"
           ],
           classroom: "Sala 03 - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "08:20 - 09:10",
-          color: ""
-        },
-        {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
-          size: 2,
-          teachers: [
-            "Rafael Luis Bartz"
-          ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -58,9 +58,9 @@ export const data = {
           subject: "Desenvolvimento Responsivo e Otimização de Sites",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -123,9 +123,9 @@ export const data = {
           subject: "Projeto Integrador III",
           size: 1,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -193,7 +193,7 @@ export const data = {
           subject: "Matemática III",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Felipe Fraga de Oliveira"
           ],
           classroom: "Sala 03 - CR Toledo",
           students: [
@@ -211,9 +211,9 @@ export const data = {
           subject: "Serviços em nuvem",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
@@ -265,19 +265,6 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Sistemas Gerenciadores de Conteúdo WEB",
-          size: 2,
-          teachers: [
-            "Humberto Fioravante Ferro"
-          ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
-          students: [
-            "IIW2023B"
-          ],
-          time: "07:30 - 08:20",
-          color: ""
-        },
-        {
           subject: "Língua Portuguesa e Literatura III",
           size: 1,
           teachers: [
@@ -287,7 +274,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
@@ -297,6 +284,19 @@ export const data = {
             "Cosme Oliveira da Silva"
           ],
           classroom: "Sala 03 - CR Toledo",
+          students: [
+            "IIW2023B"
+          ],
+          time: "08:20 - 09:10",
+          color: ""
+        },
+        {
+          subject: "Sistemas Gerenciadores de Conteúdo WEB",
+          size: 2,
+          teachers: [
+            "Humberto Fioravante Ferro"
+          ],
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
