--- a/docs/turma/iiw/iiw2024a.mdx
+++ b/docs/turma/iiw/iiw2024a.mdx
@@ -42,7 +42,7 @@ export const data = {
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "IIW2024A"
           ],
@@ -86,7 +86,7 @@ export const data = {
           teachers: [
             "Douglas Barbosa Sousa"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "IIW2024A"
           ],
