--- a/docs/turma/iiw/iiw2024b.mdx
+++ b/docs/turma/iiw/iiw2024b.mdx
@@ -27,9 +27,9 @@ export const data = {
           subject: "Desenvolvimento WEB Orientado a Objetos",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2024B"
           ],
@@ -50,12 +50,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática II",
+          subject: "Projeto Integrador II",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Sala 02 - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2024B"
           ],
@@ -123,9 +123,9 @@ export const data = {
           subject: "Laboratório de Banco de Dados",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2024B"
           ],
@@ -154,7 +154,7 @@ export const data = {
           subject: "Matemática II",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Felipe Fraga de Oliveira"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
@@ -221,10 +221,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Projeto Integrador II",
+          subject: "Administração de Sistemas Operacionais e Redes",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Sergio Ricardo Ferrazoli"
           ],
           classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
@@ -239,10 +239,10 @@ export const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Língua Portuguesa e Literatura II",
+          subject: "Matemática II",
           size: 2,
           teachers: [
-            "Talita Bortolini"
+            "Felipe Fraga de Oliveira"
           ],
           classroom: "Sala 02 - CR Toledo",
           students: [
@@ -265,12 +265,12 @@ export const data = {
           color: ""
         },
         {
-          subject: "Administração de Sistemas Operacionais e Redes",
+          subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Sergio Ricardo Ferrazoli"
+            "Talita Bortolini"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Sala 02 - CR Toledo",
           students: [
             "IIW2024B"
           ],
