--- a/docs/turma/iiw/iiw2025b.mdx
+++ b/docs/turma/iiw/iiw2025b.mdx
@@ -11,10 +11,10 @@ export const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Lingua estrangeira - Inglês",
-          size: 1,
+          subject: "Matemática I",
+          size: 2,
           teachers: [
-            "Josiane Hammes"
+            "Felipe Fraga de Oliveira"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
@@ -24,16 +24,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Matemática I",
-          size: 2,
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
           teachers: [
-            "Professor Matemática Biopark"
+            "Josiane Hammes"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
             "IIW2025B"
           ],
-          time: "08:20 - 09:10",
+          time: "09:25 - 10:15",
           color: ""
         },
         {
@@ -79,7 +79,7 @@ export const data = {
           subject: "Projeto integrador I",
           size: 2,
           teachers: [
-            "PSS informática"
+            "Álvaro José de Almeida Araújo"
           ],
           classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
@@ -97,7 +97,7 @@ export const data = {
           subject: "Matemática I",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Felipe Fraga de Oliveira"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
@@ -182,7 +182,7 @@ export const data = {
           teachers: [
             "Sergio Ricardo Ferrazoli"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
             "IIW2025B - Grupo A"
           ],
@@ -195,7 +195,7 @@ export const data = {
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2025B - Grupo B"
           ],
@@ -208,7 +208,7 @@ export const data = {
           teachers: [
             "Caroline Domingues Porto do Nascimento Barbieri"
           ],
-          classroom: "Laboratório de Informatica A - CR Toledo",
+          classroom: "Laboratório de Informatica B - CR Toledo",
           students: [
             "IIW2025B - Grupo A"
           ],
@@ -221,7 +221,7 @@ export const data = {
           teachers: [
             "Sergio Ricardo Ferrazoli"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica A - CR Toledo",
           students: [
             "IIW2025B - Grupo B"
           ],
@@ -278,10 +278,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Química I",
+          subject: "Língua Portuguesa e Literatura I",
           size: 2,
           teachers: [
-            "Cosme Oliveira da Silva"
+            "Talita Bortolini"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
@@ -291,10 +291,10 @@ export const data = {
           color: ""
         },
         {
-          subject: "Língua Portuguesa e Literatura I",
+          subject: "Química I",
           size: 2,
           teachers: [
-            "Talita Bortolini"
+            "Cosme Oliveira da Silva"
           ],
           classroom: "Sala 01 - CR Toledo",
           students: [
