--- a/docs/professor/humberto_fioravante_ferro.mdx
+++ b/docs/professor/humberto_fioravante_ferro.mdx
@@ -123,11 +123,11 @@ export const data = {
           teachers: [
             "Humberto Fioravante Ferro"
           ],
-          classroom: "Laboratório de Informatica B - CR Toledo",
+          classroom: "Laboratório de Informatica C - CR Toledo",
           students: [
             "IIW2023B"
           ],
-          time: "07:30 - 08:20",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
