--- a/docs/professor/vagner_simoes_santos.mdx
+++ b/docs/professor/vagner_simoes_santos.mdx
@@ -17,7 +17,7 @@ export const data = {
           teachers: [
             "Vagner Simões Santos"
           ],
-          classroom: "Laboratório de Computação Aplicada",
+          classroom: "Laboratório de Informatica B",
           students: [
             "IIW2023A"
           ],
