--- a/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_computacao_aplicada.mdx
@@ -22,6 +22,19 @@ export const data = {
           ],
           time: "09:25 - 10:15",
           color: ""
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 2,
+          teachers: [
+            "Douglas Barbosa Sousa"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2024A"
+          ],
+          time: "10:15 - 11:05",
+          color: ""
         }
       ]
     },
@@ -29,27 +42,28 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Desenvolvimento Responsivo e Otimização de Sites",
+          subject: "Administração de Sistemas Operacionais e Redes",
           size: 2,
           teachers: [
-            "Vagner Simões Santos"
+            "Douglas Barbosa Sousa"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: [
-            "IIW2023A"
+            "IIW2024A"
           ],
           time: "07:30 - 08:20",
           color: ""
         },
         {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          subject: "Processos de Fabricação 3",
           size: 2,
           teachers: [
-            "Samuel Stephan Milczuk"
+            "Fábio Fernandes da Silva",
+            "Luiz Inácio Chaves"
           ],
           classroom: "Laboratório de Computação Aplicada",
           students: [
-            "IIW2023A"
+            "EIN2022"
           ],
           time: "10:15 - 11:05",
           color: ""
