--- a/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/bloco_1/laboratorio_de_informatica_b.mdx
@@ -24,16 +24,16 @@ export const data = {
           color: ""
         },
         {
-          subject: "Administração de Sistemas Operacionais e Redes",
+          subject: "Informática instrumental e aplicada",
           size: 2,
           teachers: [
-            "Douglas Barbosa Sousa"
+            "Samuel Stephan Milczuk"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "IIW2024A"
+            "AGO2025 - Grupo B"
           ],
-          time: "10:15 - 11:05",
+          time: "13:10 - 14:00",
           color: ""
         },
         {
@@ -68,16 +68,29 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Administração de Sistemas Operacionais e Redes",
+          subject: "Desenvolvimento Responsivo e Otimização de Sites",
           size: 2,
           teachers: [
-            "Douglas Barbosa Sousa"
+            "Vagner Simões Santos"
           ],
           classroom: "Laboratório de Informatica B",
           students: [
-            "IIW2024A"
+            "IIW2023A"
           ],
           time: "07:30 - 08:20",
+          color: ""
+        },
+        {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Samuel Stephan Milczuk"
+          ],
+          classroom: "Laboratório de Informatica B",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05",
           color: ""
         },
         {
