--- a/docs/sala/bloco_cr_ifpr-biopark/sala_03_-_cr_toledo.mdx
+++ b/docs/sala/bloco_cr_ifpr-biopark/sala_03_-_cr_toledo.mdx
@@ -20,7 +20,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "08:20 - 09:10",
+          time: "10:15 - 11:05",
           color: ""
         }
       ]
@@ -141,7 +141,7 @@ export const data = {
           subject: "Matemática III",
           size: 2,
           teachers: [
-            "Professor Matemática Biopark"
+            "Felipe Fraga de Oliveira"
           ],
           classroom: "Sala 03 - CR Toledo",
           students: [
@@ -209,7 +209,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "09:25 - 10:15",
+          time: "07:30 - 08:20",
           color: ""
         },
         {
@@ -222,7 +222,7 @@ export const data = {
           students: [
             "IIW2023B"
           ],
-          time: "10:15 - 11:05",
+          time: "08:20 - 09:10",
           color: ""
         }
       ]
