--- a/docs/turma/ein/ein2022.mdx
+++ b/docs/turma/ein/ein2022.mdx
@@ -55,13 +55,12 @@ export const data = {
       dayName: "Terça-Feira",
       dayClasses: [
         {
-          subject: "Processos de Fabricação 3",
+          subject: "Máquinas Térmicas e de Fluxo",
           size: 2,
           teachers: [
-            "Fábio Fernandes da Silva",
             "Luiz Inácio Chaves"
           ],
-          classroom: "Laboratório de Informatica C",
+          classroom: "Sala 1-4",
           students: [
             "EIN2022"
           ],
@@ -82,12 +81,13 @@ export const data = {
           color: ""
         },
         {
-          subject: "Máquinas Térmicas e de Fluxo",
+          subject: "Processos de Fabricação 3",
           size: 2,
           teachers: [
+            "Fábio Fernandes da Silva",
             "Luiz Inácio Chaves"
           ],
-          classroom: "Sala 1-4",
+          classroom: "Laboratório de Computação Aplicada",
           students: [
             "EIN2022"
           ],
